<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>data_processing</name>
  <version>0.0.0</version>
  <description>Data processing package for mesh handling and G-code generation</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>open3d</depend>
  <depend>numpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-open3d</exec_depend>
  <exec_depend>python3-pip</exec_depend>
  <exec_depend>openscad</exec_depend>
  <exec_depend>blender</exec_depend>
  <exec_depend>python3-cgal</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
